[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Arena/Deck/Deck.tscn" type="PackedScene" id=2]
[ext_resource path="res://Arena/Hand/Hand.tscn" type="PackedScene" id=3]
[ext_resource path="res://Character/HealthBar/under.png" type="Texture" id=4]
[ext_resource path="res://Character/character_blank.png" type="Texture" id=5]
[ext_resource path="res://Character/HealthBar/progress.png" type="Texture" id=6]
[ext_resource path="res://Character/HealthBar/over.png" type="Texture" id=7]
[ext_resource path="res://Arena/Dueler/Dueler.gd" type="Script" id=8]
[ext_resource path="res://Arena/Dueler/Logic/LogicBlank.gd" type="Script" id=9]
[ext_resource path="res://Character/Energy/over.png" type="Texture" id=10]
[ext_resource path="res://Character/Energy/progress.png" type="Texture" id=11]
[ext_resource path="res://Character/Energy/under.png" type="Texture" id=12]
[ext_resource path="res://Arena/Deck/discard_pile.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 4
outline_color = Color( 0.501961, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 128
outline_size = 10
use_mipmaps = true
use_filter = true
extra_spacing_char = 8
font_data = ExtResource( 1 )

[node name="Dueler" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
max_health = 69
sprite_texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 475, 540 )
scale = Vector2( 0.66, 0.66 )
texture = ExtResource( 5 )

[node name="Health" type="CenterContainer" parent="Sprite"]
margin_left = -256.0
margin_top = 256.0
margin_right = 256.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenBar" type="TextureProgress" parent="Sprite/Health"]
margin_top = 9.0
margin_right = 512.0
margin_bottom = 41.0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 6 )
tint_progress = Color( 0.25098, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="Sprite/Health"]
margin_top = 9.0
margin_right = 512.0
margin_bottom = 41.0
max_value = 420.0
value = 69.0
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 6 )
tint_progress = Color( 0.627451, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="Sprite/Health"]
margin_left = 187.0
margin_right = 324.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "69/420"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="CenterContainer" parent="Sprite"]
margin_left = -343.0
margin_top = 330.0
margin_right = 21.0
margin_bottom = 694.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenBar" type="TextureProgress" parent="Sprite/Energy"]
margin_right = 364.0
margin_bottom = 364.0
value = 90.0
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 11 )
fill_mode = 4
tint_under = Color( 0, 0.231373, 0.34902, 1 )
tint_progress = Color( 0, 0.352941, 0.529412, 1 )

[node name="EnergyBar" type="TextureProgress" parent="Sprite/Energy"]
margin_right = 364.0
margin_bottom = 364.0
value = 66.0
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 11 )
fill_mode = 4
tint_progress = Color( 0, 0.505882, 1, 1 )

[node name="EnergyLabel" type="Label" parent="Sprite/Energy"]
margin_left = 75.0
margin_top = 106.0
margin_right = 288.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.435294, 0.658824, 1 )
text = "2/3"

[node name="Cards" type="Node2D" parent="."]

[node name="Hand" parent="." instance=ExtResource( 3 )]
position = Vector2( 960, 1026 )

[node name="DrawPile" parent="." instance=ExtResource( 2 )]
position = Vector2( 100, 980 )
scale = Vector2( 0.33, 0.33 )

[node name="DiscardPile" parent="." instance=ExtResource( 2 )]
position = Vector2( 1820, 980 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 13 )

[node name="Logic" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="ReturnTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]
[connection signal="card_moved" from="Hand" to="." method="_on_Hand_card_moved"]
[connection signal="card_released" from="Hand" to="." method="_on_Hand_card_released"]
[connection signal="timeout" from="ReturnTimer" to="." method="_on_ReturnTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_all_completed"]
